# px4-offboard_control

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/px4_msgs/share/px4_msgs/: local_setup.sh  package.sh
install/px4_offboard/lib/px4_offboard/: figure8  offboard_control
install/px4_offboard/share/px4_offboard/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/px4_offboard/share/px4_offboard/cmake/: px4_offboardConfig.cmake
log/: latest_build
src/px4_offboard/: CMakeLists.txt  package.xml
src/px4_offboard/src/: figure8_node.cpp  offboard_control.cpp  plot_trajectory.py
